force-app/main/default/objects/Contact/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>Account.Account_Type__c</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>