force-app/main/default/objects/Contact/fields/Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Authority_Level__c</fullName>
    <label>Authority Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1: C Level / VP IT / Director Level / Key Decision Makers</fullName>
            </value>
            <value>
                <fullName>Tier 2: GM / AGM / Manager IT / Sr Manager IT. Mid Level managers handling Teams</fullName>
            </value>
            <value>
                <fullName>Tier 3: System Admin / Executives / Asst Managers : Influencers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>