force-app/main/default/objects/Contact/fields/Check_Contact_Type_Contains_Technical__c.field-meta.xml
<CustomField>
    <fullName>Check_Contact_Type_Contains_Technical__c</fullName>
    <formula>IF(INCLUDES(ContactType__c,&apos;Technical&apos;) ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Contact Type Contains Technical</label>
    <type>Checkbox</type>
</CustomField>