force-app/main/default/objects/Contact/fields/Contact_Id_18char__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Contact Id 18char</label>
    <type>Text</type>
</CustomField>