force-app/main/default/objects/Contact/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Contact Id</label>
    <type>AutoNumber</type>
</CustomField>