force-app/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Business Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>IT Operations</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
                <label>Technical Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>