force-app/main/default/objects/Contact/fields/Created_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Salesforce__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <description>To identify if the contact is created first in Salesforce or Pardot</description>
    <inlineHelpText>To identify if the contact is created first in Salesforce or Pardot</inlineHelpText>
    <label>Created in Salesforce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>