force-app/main/default/objects/Contact/fields/Deactivation_Status__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Status__c</fullName>
    <description>Created By Nandish for Contact Deactivation</description>
    <label>Deactivation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Generated</fullName>
            </value>
            <value>
                <fullName>Deactivation in Progress</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Deactivation Approved</fullName>
            </value>
            <value>
                <fullName>Deactivation Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>