force-app/main/default/objects/Contact/fields/Generate_Deactivation_Request__c.field-meta.xml
<CustomField>
    <fullName>Generate_Deactivation_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Nandish for Contact Deactivation Integration</description>
    <label>Generate Deactivation Request</label>
    <type>Checkbox</type>
</CustomField>