force-app/main/default/objects/Contact/fields/isPartner__c.field-meta.xml
<CustomField>
    <fullName>isPartner__c</fullName>
    <formula>Account.Is_Ready_for_Integration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>