force-app/main/default/objects/Contact/fields/KYC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approval_Status__c</fullName>
    <formula>TEXT( Account.KYC_Approval_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Approval Status</label>
    <type>Text</type>
</CustomField>