force-app/main/default/objects/Contact/fields/Notifications_Associated__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Associated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[GG]This field will be updated by ITSM via integration. TRUE indicates that there are NOTIFICATIONS sent to this contact.</description>
    <label>Notifications Associated</label>
    <type>Checkbox</type>
</CustomField>