force-app/main/default/objects/Contact/fields/Replacement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By Nandish for Contact Deactivation</description>
    <label>Replacement Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Active Contact from the same Account.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Contact.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Replaced Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>