force-app/main/default/objects/Contact/fields/Replacement_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Contact_Text__c</fullName>
    <label>Replacement Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>