force-app/main/default/objects/Contact/fields/Send_To_API_Layer__c.field-meta.xml
<CustomField>
    <fullName>Send_To_API_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Kafka</label>
    <type>Checkbox</type>
</CustomField>