force-app/main/default/objects/Contact/fields/YCIC_Member__c.field-meta.xml
<CustomField>
    <fullName>YCIC_Member__c</fullName>
    <label>YCIC Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>