force-app/main/default/objects/Contact/validationRules/Cannot_Change_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(AccountId),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Cannot Change Account on the Contact</errorMessage>
</ValidationRule>