force-app/main/default/objects/Contact/validationRules/Check_Active_Notifications_on_Deactivate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Active_Notifications_on_Deactivate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Inactive&apos;),
  Notifications_Associated__c = true  
)</errorConditionFormula>
    <errorMessage>Inactive Contacts cannot have active notifications</errorMessage>
</ValidationRule>