force-app/main/default/objects/Contact/validationRules/Enter_country_code_if_mobile_no_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_country_code_if_mobile_no_not_null</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( MobilePhone )), ISPICKVAL( Country_Code__c, &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Country_Code__c</errorDisplayField>
    <errorMessage>Please select Country Code for entered Mobile number.</errorMessage>
</ValidationRule>