force-app/main/default/objects/Contact/validationRules/FirstName_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Mandatory</fullName>
    <active>true</active>
    <description>24-Sep-2020 - FirstName should be mandatory as this is needed in the backend applications for integration</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorMessage>First Name is mandatory</errorMessage>
</ValidationRule>