force-app/main/default/objects/Contact/validationRules/Replacement_Contact_Should_be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Replacement_Contact_Should_be_Active</fullName>
    <active>true</active>
    <description>Replacement Contact must be Active</description>
    <errorConditionFormula>TEXT(Replacement_Contact__r.Status__c) = &quot;Inactive&quot; &amp;&amp; ISCHANGED( Replacement_Contact__c )</errorConditionFormula>
    <errorDisplayField>Replacement_Contact__c</errorDisplayField>
    <errorMessage>Replacement Contact must be Active</errorMessage>
</ValidationRule>